--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.redis.port=6379
 spring.cache.type=redis
 
 #datasource & pool
-spring.datasource.url=jdbc:mysql://172.16.4.18:3314/es_saas_product?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://172.16.4.18:3314/es_saas_activity?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=yijiupi
 
