--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.9.0</version>
+        </dependency>
+
         <!--mq配置-->
         <dependency>
             <groupId>org.springframework.amqp</groupId>
